--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -47,11 +47,7 @@ html {
     }
 
     @media only screen and(max-width: $bp-small) {
-        font-size: 46%;
-    }
-
-    @media only screen and(max-width: $bp-smallest) {
-        font-size: 40%;
+        font-size: 45%;
     }
 }
 
@@ -70,6 +66,7 @@ body {
         flex-direction: column;
     }
 }
+
 
 @keyframes MoveInBottom {
     0% {
@@ -96,5 +93,16 @@ body {
     100% {
         opacity: 1;
         transform: translate(0);
+    }
+}
+
+.slide-in {
+    opacity: 0;
+    transition: all 1s;
+    transform: translateX(-30%) scale(0.95);
+
+    &.active {
+        opacity: 1;
+        transform: translateX(0%) scale(1);
     }
 }
