--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -440,6 +440,7 @@
             font-size: $default-font-size;
             text-align: right;
             padding-bottom: 3rem;
+            width: 100%;
         }
 
         &--input {
