--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -59,9 +59,14 @@
 
 .banner {
     background: linear-gradient(to right, $font-primary, $font-primary-light);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
     color: #fff;
-    min-height: 95vh;
+    min-height: 85vh;
+
+    @supports (-webkit-clip-path: polygon(0 0)) or (clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+        height: 95vh;
+    }
 
     @media only screen and(max-width: $bp-large) {
         padding: 0 5rem;
@@ -90,7 +95,6 @@
     }
 
     &__info {
-        // flex: 0 0 58%;
         padding-right: 3rem;
 
         @media only screen and(max-width: $bp-small) {
@@ -109,7 +113,6 @@
     }
 
     &__banner {
-        // flex: 1;
         background-image: url("../images/illustration-hero.svg");
         background-size: contain;
         background-repeat: no-repeat;
@@ -284,9 +287,14 @@
 }
 
 .footer {
-    padding: 23rem 0 15rem;
-    clip-path: polygon(0 0, 100% 13rem, 100% 100%, 0 100%);
+    padding: 15rem 0;
     background-color: $font-primary-dark;
+
+    @supports (-webkit-clip-path: polygon(0 0)) or (clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0, 100% 13rem, 100% 100%, 0 100%);
+        clip-path: polygon(0 0, 100% 13rem, 100% 100%, 0 100%);
+        padding: 23rem 0 15rem;
+    }
 
     @media only screen and(max-width: $bp-large) {
         padding-left: 5rem;
