--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,55 +1,57 @@
 /* ----- HEADINGS ----- */
 
 .heading-primary {
-    font-size: 4rem;
-    text-transform: capitalize;
-    line-height: 1.4;
-    animation: MoveInLeft 1s ease-out;
-
+  font-size: 4rem;
+  text-transform: capitalize;
+  line-height: 1.4;
+  animation: MoveInLeft 1s ease-out;
 }
 
 .heading-secondary {
-    font-size: 3.25rem;
-    text-transform: capitalize;
-    line-height: 1.4;
-    color: $font-primary;
+  font-size: 3.25rem;
+  text-transform: capitalize;
+  line-height: 1.4;
+  color: $font-primary;
 }
 
 .heading-tertiary {
-    font-size: 2.1rem;
-    color: $font-primary;
+  font-size: 2.1rem;
+  color: $font-primary;
+  @media only screen and(max-width: $bp-smallest) {
+    font-size: 2.3rem;
+  }
 }
 
 /* ----- BTN ----- */
 
 .btn-main {
-    display: inline-block;
-    color: #fff;
-    background-color: $btn-main-color;
-    padding: 1.1rem 3rem;
+  display: inline-block;
+  color: #fff;
+  background-color: $btn-main-color;
+  padding: 1.1rem 3rem;
+  border: 3px solid $btn-main-color;
+  font-size: $default-font-size;
+  text-decoration: none;
+  border-radius: 5px;
+  letter-spacing: 0.5px;
+  transition: all 0.2s;
+  font-weight: 600;
+
+  &:hover {
     border: 3px solid $btn-main-color;
-    font-size: $default-font-size;
-    text-decoration: none;
-    border-radius: 5px;
-    letter-spacing: 0.5px;
-    transition: all 0.2s;
-    font-weight: 600;
+    background-color: transparent;
+    color: $btn-main-color;
+    box-shadow: 0 1rem 2rem rgba(256, 256, 256, 0.15);
+    transform: translateY(-2px);
+  }
 
-    &:hover {
-        border: 3px solid $btn-main-color;
-        background-color: transparent;
-        color: $btn-main-color;
-        box-shadow: 0 1rem 2rem rgba(256, 256, 256, .15);
-        transform: translateY(-2px);
-    }
-
-    &:active {
-        box-shadow: 0 0.5rem 1rem rgba(256, 256, 256, 0.15);
-        transform: translateY(-1px);
-    }
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba(256, 256, 256, 0.15);
+    transform: translateY(-1px);
+  }
 }
 
 .btn--animated {
-    animation: MoveInBottom 0.5s ease-in 0.85s;
-    animation-fill-mode: backwards;
+  animation: MoveInBottom 0.5s ease-in 0.85s;
+  animation-fill-mode: backwards;
 }
