--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ body {
     .banner {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
-      height: 95vh; } }
+      min-height: 95vh; } }
   @media only screen and (max-width: 1200px) {
     .banner {
       padding: 0 5rem; } }
