--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -65,7 +65,7 @@
   @supports (-webkit-clip-path: polygon(0 0)) or (clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
-    height: 95vh;
+    min-height: 95vh;
   }
 
   @media only screen and(max-width: $bp-large) {
